gsm-gprs: fix typo

--- a/html/gsm-gprs.html
+++ b/html/gsm-gprs.html
@@ -165,7 +165,7 @@
             <li>DCCH(Dedicated Control Channels) message exchange
             <ul>
                 <li>SDCCH(Standalone Dedicated Control Channel)
-                独立专用控制信道 exchage sigaling uplink and downlink</li>
+                独立专用控制信道 exchange sigaling uplink and downlink</li>
                 <li>SACCH 慢相关控制信道 channel maintainance and control</li>
                 <li>FACCH 快相关控制信道
                 replace traffic channel when urgent sigaling needed</li>
