enrich GSM/GPRS page

--- a/html/gsm-gprs.html
+++ b/html/gsm-gprs.html
@@ -108,9 +108,8 @@
             <abbr title="Radio Resource management">RR</abbr></li>
         </ol>
         <h3>GSM FDMA Structure</h3>
-        <p>Fig Missing!</p>
+        <p>FDD, FDMA</p>
         <h3>GSM TDMA Frame Structure</h3>
-        <p>Fig Missing!</p>
         <ul>
             <li>每帧 4.615ms</li>
             <li>TDMA。8 时槽/时隙，每时槽 0.557ms。</li>
@@ -171,6 +170,29 @@
                 replace traffic channel when urgent sigaling needed</li>
             </ul>
             </li>
+        </ul>
+        <h3>Mapping Example</h3>
+        <p>From:
+        <a href=
+            "http://www.gsmfordummies.com/tdma/logical.shtml#ARFCN_mapping"
+            >Section "ARFCN Mapping" of "Logical Channels"</a>
+        <ul class="nowrap">
+            <li>TS0 <img alt="FCCH + SCH + BCCH + CCCH"
+            src="../img/logical1.jpg" /></li>
+            <li>TS1 <img alt="SDCCH/8(0 .7) + SACCH/C8(0 . 7)"
+            src="../img/logical3.jpg" /></li>
+            <li>TS2 <img alt="Full Rate Traffic Channel (TCH/FS)"
+            src="../img/logical4.jpg" /></li>
+            <li>TS3 <img alt="Half Rate Traffic Channel (TCH/HS)"
+            src="../img/logical6.jpg" /></li>
+            <li>TS4 <img alt="Full Rate Traffic Channel (TCH/FS)"
+            src="../img/logical4.jpg" /></li>
+            <li>TS5 <img alt="Half Rate Traffic Channel (TCH/HS)"
+            src="../img/logical6.jpg" /></li>
+            <li>TS6 <img alt="Full Rate Traffic Channel (TCH/FS)"
+            src="../img/logical4.jpg" /></li>
+            <li>TS7 <img alt="Half Rate Traffic Channel (TCH/HS)"
+            src="../img/logical6.jpg" /></li>
         </ul>
 
     </div><!-- end of maincontent -->
