--- a/html/resources.html
+++ b/html/resources.html
@@ -99,6 +99,7 @@
                     <li><a href="math-test.xhtml">MathML</a></li>
                     <li><a href="../txt/Ati_and_Nvidia_graphics_naming.txt">
                         ATI与Nvidia显卡命名规则</a></li>
+                    <li><a href="gsm-gprs.html">GSM/GPRS 调研</a>
                     <li><a href="wind.html">风力等级表</a></li>
                     <li><a href="ascii_smileys.html">ASCII 表情符</a></li>
                     <li><a href="chat_acronyms.html">聊天中常见英文缩略词</a></li>
