gnuradio: more info

--- a/html/gnuradio.html
+++ b/html/gnuradio.html
@@ -37,11 +37,21 @@
             </ul>
         </div><!-- end of wecando -->
 
-        <p>Useful links:</p>
+        <p>GNU Radio 是一套自由软件工具，用于软件无线电领域。</p>
+
+        <p>应用程序主要使用 Python 语言编写（flow graph 流图概念），
+        核心算法/功能实现采用 C++（block，模块概念）。
+        接口使用 SWIG 工具来自动化。
+
+        <p>实用资料：</p>
 	<ul>
             <li><a href="http://gnuradio.org/redmine/projects/gnuradio/wiki">主页</a></li>
-            <li><a href="http://gnuradio.org/redmine/projects/gnuradio/wiki/ReportingErrors">ReportingErrors</a></li>
+            <li><a href="http://sdrblog.wordpress.com/gnuradio-installation/">一个安装介绍</a></li>
             <li><a href="http://gnuradio.org/redmine/projects/gnuradio/wiki/HowToUse">HowToUse</a></li>
+            <li><a href="http://gnuradio.org/redmine/projects/gnuradio/wiki/TutorialsWritePythonApplications">TutorialsWritePythonApplications</a></li>
+            <li><a href="http://www.gnu.org/software/gnuradio/doc/howto-write-a-block.html">How to Write a Signal Processing Block</a></li>
+            <li><a href="http://trg.fke.utm.my/members/adib/">Code walkthrough for benchmark{RX,TX}</a></li>
+            <li><a href="http://gnuradio.org/redmine/projects/gnuradio/wiki/ReportingErrors">ReportingErrors</a></li>
         </ul>
 
     </div><!-- end of maincontent -->
