--- a/html/tex.html
+++ b/html/tex.html
@@ -71,6 +71,11 @@
         <p>用于TeX的文档字数统计工具：
         <pre>texcount -chinese texfile</pre>
 
+        <p>TeX 中的长度单位</p>
+        <pre>1pt=65536sp=1/72.27in</pre>
+        <pre>1in=25.4mm=2.54cm</pre>
+        <pre>1bp=1/72in</pre>
+
         <p>下面列出一些在线资料</p>
 
         <ol>
