vim.html: add links of plugins

--- a/html/vim.html
+++ b/html/vim.html
@@ -65,6 +65,13 @@
             "http://linuxtoy.org/archives/vim_7_new_features.html">细说 Vim 7
             之新特性 — LinuxTOY</a></li>
         </ol>
+
+        <p>下面是一些 Vim 插件的链接：</p>
+        <ul>
+            <li><a href="http://vimim.googlecode.com/svn/vimim/vimim.html">
+                Vimim(Vim 中文输入法)</a></li>
+            <li><a href="http://vim-latex.sourceforge.net/index.php">Vim-LaTeX</a></li>
+        </ul>
     </div><!-- end of maincontent -->
 
     <div id="bottom">
