UI refinement begin with surfing page
* split standalone nav bar
* put main column and sidebar into a maincontainer

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -33,6 +33,18 @@
         </div>
     </div><!-- end of header -->
 
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
+            <li><a href="#surfing" class="focus">站点导航</a></li>
+            <li><a href="resources.html">文档资料</a></li>
+            <li><a href="images.html">美图收藏</a></li>
+            <li><a href="music.html">OGG音乐</a></li>
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
     <div id="sidebar">
         <div id="timer">
             <!-- show current time -->
@@ -51,11 +63,10 @@
                     <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
                      <select id="select">
                         <option selected="selected" value="0">
-                            google hk
+                            google.com.hk
                         </option>
-
                         <option value="1">
-                            google hk linux
+                            google.com
                         </option>
                     </select> <input type="submit" name="btnG" value="Go"
                     onclick="multi_search()" />
@@ -65,17 +76,6 @@
     </div><!-- end of sidebar -->
 
     <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a href="../index.html">首页</a></li>
-                <li><a href="#surfing" class="focus">站点导航</a></li>
-                <li><a href="resources.html">文档资料</a></li>
-                <li><a href="images.html">美图收藏</a></li>
-                <li><a href="music.html">OGG音乐</a></li>
-                <li><a href="about.html">关于</a></li>
-            </ul>
-        </div><!-- end of wecando -->
-
         <div id="surfing" class="surfing">
 
             <div class="siteclass">
@@ -125,6 +125,7 @@
             </div>
         </div>
     </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer -->
 
     <div id="bottom">
         <div class="tiny">
