UI refinements with core nav page

--- a/html/images.html
+++ b/html/images.html
@@ -33,47 +33,50 @@
         </div>
     </div><!-- end of header -->
 
-    <div id="sidebar">
-        <div id="timer">
-            <!-- show current time -->
-        </div>
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
+            <li><a href="surfing.html">站点导航</a></li>
+            <li><a href="resources.html">文档资料</a></li>
+            <li><a href="#image" class="focus">美图收藏</a></li>
+            <li><a href="music.html">OGG音乐</a></li>
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
 
-        <!--<div id="weather"> </div>-->
-        
-    </div><!-- end of sidebar -->
+    <div id="maincontainer">
+        <div id="sidebar">
+            <div id="timer">
+                <!-- show current time -->
+            </div>
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a href="../index.html">首页</a></li>
-                <li><a href="surfing.html">站点导航</a></li>
-                <li><a href="resources.html">文档资料</a></li>
-                <li><a href="#image" class="focus">美图收藏</a></li>
-                <li><a href="music.html">OGG音乐</a></li>
-                <li><a href="about.html">关于</a></li>
-            </ul>
-        </div><!-- end of wecando -->
+            <!--<div id="weather"> </div>-->
 
-        <div id="image">
-            <div id="image_box_container">
-                <div id="image_box" class="img_center">
-                    <img src="../img/how_many.gif" id="slide" alt=
-                    "slide show" />
+        </div><!-- end of sidebar -->
 
-                    <div id="caption">
-                        how_many
+        <div id="maincontent">
+
+            <div id="image">
+                <div id="image_box_container">
+                    <div id="image_box" class="img_center">
+                        <img src="../img/how_many.gif" id="slide" alt=
+                        "slide show" />
+
+                        <div id="caption">
+                            how_many
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="shadow">
-                <a href="#" id="prelink" name="prelink">&lt;&lt;后退</a>
-                <a href="#" id="nextlink" name="nextlink">前进&gt;&gt;</a>
-                &nbsp;&nbsp; <input type="button" id="auto" value="幻灯片效果" />
-                <input type="button" id="noauto" value="停止" />
+                <div class="shadow">
+                    <a href="#" id="prelink" name="prelink">&lt;&lt;后退</a>
+                    <a href="#" id="nextlink" name="nextlink">前进&gt;&gt;</a>
+                    &nbsp;&nbsp; <input type="button" id="auto" value="幻灯片效果" />
+                    <input type="button" id="noauto" value="停止" />
+                </div>
             </div>
-        </div>
-    </div><!-- end of maincontent -->
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer -->
 
     <div id="bottom">
         <div class="tiny">
