--- a/html/music.html
+++ b/html/music.html
@@ -31,72 +31,75 @@
             "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
         </div>
     </div><!-- end of header -->
-    <div id="sidebar">
-        <div id="timer">
-            <!-- show current time -->
-        </div>
 
-        <!--<div id="weather"></div>-->
-    </div><!-- end of sidebar -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
+            <li><a href="surfing.html">站点导航</a></li>
+            <li><a href="resources.html">文档资料</a></li>
+            <li><a href="images.html">美图收藏</a></li>
+            <li><a href="#oggintro" class="focus">OGG音乐</a></li>
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
+    <div id="maincontainer">
+        <div id="sidebar">
+            <div id="timer">
+                <!-- show current time -->
+            </div>
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a href="../index.html">首页</a></li>
-                <li><a href="surfing.html">站点导航</a></li>
-                <li><a href="resources.html">文档资料</a></li>
-                <li><a href="images.html">美图收藏</a></li>
-                <li><a href="#oggintro" class="focus">OGG音乐</a></li>
-                <li><a href="about.html">关于</a></li>
-            </ul>
-        </div><!-- end of wecando -->
+            <!--<div id="weather"></div>-->
+        </div><!-- end of sidebar -->
 
-        <div id="oggintro">
-            <p>鉴于ogg在中国还不为许多人了解，这里提供一些资料（主要是音乐文件）做一些推广。</p>
+        <div id="maincontent">
 
-            <p>这里的音乐有的是我自己使用oggconvert转换的，有的是从网上下的。它们都可以被自由下载复制。</p>
+            <div id="oggintro">
+                <p>鉴于ogg在中国还不为许多人了解，这里提供一些资料（主要是音乐文件）做一些推广。</p>
 
-            <h1>ogg简介</h1>
+                <p>这里的音乐有的是我自己使用oggconvert转换的，有的是从网上下的。它们都可以被自由下载复制。</p>
 
-            <p>
-            OGG是一种多媒体容器格式，它可以嵌入音频、视频、文本、元数据等文件。OGG是由Xiph基金会赞助开发的，它是免费、开源、没有专利限制的。OGG的音频有损压缩编码方案就是OGG
-            Vorbis，其文件扩展名为.ogg。</p>
+                <h1>ogg简介</h1>
 
-            <p>
-            与MP3类似，OGGVorbis也是对音频进行有损压缩编码，但通过使用更加先进的声学模型去减少损失，因此，相同码率编码的OGGVorbis比
-            MP3音质更好一些，文件也更小一些。另外，MP3格式是受专利保护的。发布或者销售MP3编码器、MP3解码器、MP3格式音乐作品，都需要付专利使用费。而OGGVorbis就完全没有这个问题。目前，OGG
-            Vorbis虽然还不普及，但在音乐软件、游戏音效、便携播放器、网络浏览器上都得到广泛支持。</p>
+                <p>
+                OGG是一种多媒体容器格式，它可以嵌入音频、视频、文本、元数据等文件。OGG是由Xiph基金会赞助开发的，它是免费、开源、没有专利限制的。OGG的音频有损压缩编码方案就是OGG
+                Vorbis，其文件扩展名为.ogg。</p>
 
-            <p>更多内容，可以参看<a href=
-            "http://baike.baidu.com/view/99249.htm">百度百科</a>。</p>
+                <p>
+                与MP3类似，OGGVorbis也是对音频进行有损压缩编码，但通过使用更加先进的声学模型去减少损失，因此，相同码率编码的OGGVorbis比
+                MP3音质更好一些，文件也更小一些。另外，MP3格式是受专利保护的。发布或者销售MP3编码器、MP3解码器、MP3格式音乐作品，都需要付专利使用费。而OGGVorbis就完全没有这个问题。目前，OGG
+                Vorbis虽然还不普及，但在音乐软件、游戏音效、便携播放器、网络浏览器上都得到广泛支持。</p>
 
-            <h2>播放器软件</h2>
+                <p>更多内容，可以参看<a href=
+                    "http://baike.baidu.com/view/99249.htm">百度百科</a>。</p>
 
-            <p>
-            Windows下Winamp、Sonique、FreeAMP等（网上介绍）都可以播放ogg格式的文件。我比较推荐Mplayer，这是一款全能、开源、<abbr title="这是个中国特色的词语"><span class="fun">“绿色”</span></abbr>的音视频播放器。最初是Linux下的，现在已经有<abbr title="Linux, Windows, Mac OS X等">各平台</abbr>下的版本。
-            </p>
-            <p>
-            Mplayer官网是www.mplayerhq.hu （一个匈牙利的网站），
-            要下载中文版的Mplayer for Windows可以到
-            <a href= "http://www.mplayer.org.cn/">
-                http://www.mplayer.org.cn/</a>。
-            </p>
-        </div>
+                <h2>播放器软件</h2>
 
-        <div id="songs" class="shadow">
-            <h1>songs</h1>
+                <p>
+                Windows下Winamp、Sonique、FreeAMP等（网上介绍）都可以播放ogg格式的文件。我比较推荐Mplayer，这是一款全能、开源、<abbr title="这是个中国特色的词语"><span class="fun">“绿色”</span></abbr>的音视频播放器。最初是Linux下的，现在已经有<abbr title="Linux, Windows, Mac OS X等">各平台</abbr>下的版本。
+                </p>
+                <p>
+                Mplayer官网是www.mplayerhq.hu （一个匈牙利的网站），
+                要下载中文版的Mplayer for Windows可以到
+                <a href= "http://www.mplayer.org.cn/">
+                    http://www.mplayer.org.cn/</a>。
+                </p>
+            </div>
 
-            <p>Westlife: <a href=
-            "../music/How_Does_If_Feel.ogg">How_Does_It_Feel</a></p>
-        </div>
+            <div id="songs" class="shadow">
+                <h1>songs</h1>
 
-        <div id="music" class="shadow">
-            <h1>music</h1>
+                <p>Westlife: <a href=
+                    "../music/How_Does_If_Feel.ogg">How_Does_It_Feel</a></p>
+            </div>
 
-            <p>加勒比海盗里的<a href=
-            "../music/he's_a_pirate.ogg">he's_a_pirate</a></p>
-        </div>
-    </div><!-- end of maincontent div -->
+            <div id="music" class="shadow">
+                <h1>music</h1>
+
+                <p>加勒比海盗里的<a href=
+                    "../music/he's_a_pirate.ogg">he's_a_pirate</a></p>
+            </div>
+        </div><!-- end of maincontent div -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <a href="#header">回到顶部</a>
