--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
             "Keep It Simple, Stupid">KISS原则</abbr>与Web标准</strong></p>
         </div>
     </div><!-- end of header -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="index.html" class="focus">首页</a></li>
+            <li><a href="html/surfing.html">站点导航</a></li>
+            <li><a href="html/resources.html">文档资料</a></li>
+            <li><a href="html/images.html">美图收藏</a></li>
+            <li><a href="html/music.html">OGG音乐</a></li>
+            <li><a href="html/about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
 
+    <div id="maincontainer">
     <div id="sidebar">
         <div id="timer">
             <!-- show current time -->
@@ -57,11 +68,11 @@
                     <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
                      <select id="select">
                         <option selected="selected" value="0">
-                            google hk
+                            google.com.hk
                         </option>
 
                         <option value="1">
-                            google hk linux
+                            google.com
                         </option>
                     </select> <input type="submit" name="btnG" value="Go"
                     onclick="multi_search()" />
@@ -71,16 +82,6 @@
     </div><!-- end of sidebar -->
 
     <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a href="index.html" class="focus">首页</a></li>
-                <li><a href="html/surfing.html">站点导航</a></li>
-                <li><a href="html/resources.html">文档资料</a></li>
-                <li><a href="html/images.html">美图收藏</a></li>
-                <li><a href="html/music.html">OGG音乐</a></li>
-                <li><a href="html/about.html">关于</a></li>
-            </ul>
-        </div><!-- end of wecando -->
         <div id="introduction">
             <p>欢迎来到我的个人主页。</p>
 
@@ -99,6 +100,7 @@
             </p>
         </div>
     </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer -->
 
     <div id="bottom">
         <div class="tiny">
