--- a/html/about.html
+++ b/html/about.html
@@ -37,154 +37,156 @@
 
     </div><!-- end of header -->
 
-    <div id="sidebar">
-        <div id="timer">
-            <!-- show current time -->
-        </div>
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
+            <li><a href="surfing.html">站点导航</a></li>
+            <li><a href="resources.html">文档资料</a></li>
+            <li><a href="images.html">美图收藏</a></li>
+            <li><a href="music.html">OGG音乐</a></li>
+            <li><a href="#releasenoteshead" class="focus">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
+    <div id="maincontainer">
+        <div id="sidebar">
+            <div id="timer">
+                <!-- show current time -->
+            </div>
 
-        <!--<div id="weather"></div>-->
-    </div><!-- end of header -->
+            <!--<div id="weather"></div>-->
+        </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a href="../index.html">首页</a></li>
-                <li><a href="surfing.html">站点导航</a></li>
-                <li><a href="resources.html">文档资料</a></li>
-                <li><a href="images.html">美图收藏</a></li>
-                <li><a href="music.html">OGG音乐</a></li>
-                <li><a href="#releasenoteshead" class="focus">关于</a></li>
-            </ul>
-        </div><!-- end of wecando -->
+        <div id="maincontent">
 
-        <div id="releasenoteshead">
-            <h2>发行注记&nbsp;<span class="tiny clicktogglereleasenotes">折叠</span></h2>
-        </div>
-        <div id="releasenotes">
+            <div id="releasenoteshead">
+                <h2>发行注记&nbsp;<span class="tiny clicktogglereleasenotes">折叠</span></h2>
+            </div>
+            <div id="releasenotes">
 
-            <p>当前版本：v1.14 (2011/11/24)</p>
+                <p>当前版本：v1.14 (2011/11/24)</p>
 
-            <p class="version">Version 1.5(2010/09/19)</p>
+                <p class="version">Version 1.5(2010/09/19)</p>
 
-            <ol>
-                <li>许多更新、改进。详见git吧。</li>
-            </ol>
+                <ol>
+                    <li>许多更新、改进。详见git吧。</li>
+                </ol>
 
-            <p class="version">Version 1.1(2010/08/15)</p>
+                <p class="version">Version 1.1(2010/08/15)</p>
 
-            <ol>
-                <li>修改了google中文搜索</li>
-            </ol>
+                <ol>
+                    <li>修改了google中文搜索</li>
+                </ol>
 
-            <p class="version">Version 1.0</p>
+                <p class="version">Version 1.0</p>
 
-            <ol>
-                <li>经过这么长时间的折腾，感觉可以出一个稳定的正式版了</li>
+                <ol>
+                    <li>经过这么长时间的折腾，感觉可以出一个稳定的正式版了</li>
 
-                <li>在界面上，站内的链接与通往外站的链接的样式不同：仔细看的话，会发现有阴影效果：）</li>
-            </ol>
+                    <li>在界面上，站内的链接与通往外站的链接的样式不同：仔细看的话，会发现有阴影效果：）</li>
+                </ol>
 
-            <p class="version">Version 0.3.9</p>
+                <p class="version">Version 0.3.9</p>
 
-            <ol>
-                <li>265.com的日期的农历已经失效，弃用。换为本地的js实现。</li>
+                <ol>
+                    <li>265.com的日期的农历已经失效，弃用。换为本地的js实现。</li>
 
-                <li>修正页面代码以符合XHTML 1.0 STRICT标准</li>
-            </ol>
+                    <li>修正页面代码以符合XHTML 1.0 STRICT标准</li>
+                </ol>
 
-            <p class="version">Version 0.3.8</p>
+                <p class="version">Version 0.3.8</p>
 
-            <ol>
-                <li>分出surfing.html页面</li>
+                <ol>
+                    <li>分出surfing.html页面</li>
 
-                <li>改善搜索、日期、天气块的定位</li>
-            </ol>
+                    <li>改善搜索、日期、天气块的定位</li>
+                </ol>
 
-            <p class="version">Version 0.3.7</p>
+                <p class="version">Version 0.3.7</p>
 
-            <ol>
-                <li>新增火车票查询小工具</li>
+                <ol>
+                    <li>新增火车票查询小工具</li>
 
-                <li>改善导航菜单</li>
+                    <li>改善导航菜单</li>
 
-                <li>实现图片浏览和幻灯片式自动播放(使用了javascript)</li>
-            </ol>
+                    <li>实现图片浏览和幻灯片式自动播放(使用了javascript)</li>
+                </ol>
 
-            <p class="version">Version 0.3.6</p>
+                <p class="version">Version 0.3.6</p>
 
-            <ol>
-                <li>将主要页面完全统一</li>
-            </ol>
+                <ol>
+                    <li>将主要页面完全统一</li>
+                </ol>
 
-            <p class="version">Version 0.3.6Beta</p>
+                <p class="version">Version 0.3.6Beta</p>
 
-            <ol>
-                <li>统一了界面</li>
+                <ol>
+                    <li>统一了界面</li>
 
-                <li>还是个Beta版～</li>
-            </ol>
+                    <li>还是个Beta版～</li>
+                </ol>
 
-            <p class="version">Version 0.3.5</p>
+                <p class="version">Version 0.3.5</p>
 
-            <ol>
-                <li>站点导航中划分功能。</li>
+                <ol>
+                    <li>站点导航中划分功能。</li>
 
-                <li>blink的使用：主页的Firefox是会闪烁的，不过好像只是在网景这边的浏览器中。</li>
+                    <li>blink的使用：主页的Firefox是会闪烁的，不过好像只是在网景这边的浏览器中。</li>
 
-                <li>删掉了主页中几张不很必要的小图片。</li>
-            </ol>
-        </div>
+                    <li>删掉了主页中几张不很必要的小图片。</li>
+                </ol>
+            </div>
 
-        <div id="why_write_this">
-            <h2>建站缘由</h2>
+            <div id="why_write_this">
+                <h2>建站缘由</h2>
 
-            <p>为什么要写这些网页呢？</p>
+                <p>为什么要写这些网页呢？</p>
 
-            <ol>
-                <li>
-                网页成于无意之中。它最初是我试验OpenOffice的一个功能（导出为一个简单的网站所需的文件）时得到的。然后我把它上传到这个地方（学校的服务器，为每个学生提供了域名空间），令我高兴地，成功了。</li>
+                <ol>
+                    <li>
+                    网页成于无意之中。它最初是我试验OpenOffice的一个功能（导出为一个简单的网站所需的文件）时得到的。然后我把它上传到这个地方（学校的服务器，为每个学生提供了域名空间），令我高兴地，成功了。</li>
 
-                <li>
-                网页文件（html）就是文本文件。html文件实质就是加了各种实用标记的文本文件。通过网页浏览器的解释，我们就可以看到漂亮的网页了。建议没有看过网页源代码的人们利用一下浏览器的“查看源代码”功能吧。那些尖括号（和它作用的东西）就使得文本成了超文本了。（当然还有css,
-                超链接的帮忙）
+                    <li>
+                    网页文件（html）就是文本文件。html文件实质就是加了各种实用标记的文本文件。通过网页浏览器的解释，我们就可以看到漂亮的网页了。建议没有看过网页源代码的人们利用一下浏览器的“查看源代码”功能吧。那些尖括号（和它作用的东西）就使得文本成了超文本了。（当然还有css,
+                    超链接的帮忙）
 
                     <blockquote class="bubble">
                         "一切程序都应该能处理文本流"
                     </blockquote>超链接很有意思。起初我就是在想，超链接是怎么实现的。后来发现，其实就是用锚(a
                     href=)实现的。如此简单。
-                </li>
-            </ol>
-        </div>
+                    </li>
+                </ol>
+            </div>
 
-        <div id="copyright">
-            <h2>版权与许可</h2>
+            <div id="copyright">
+                <h2>版权与许可</h2>
 
-            <p><strong>新做了决定，本站点作品(不包含引文)采用<em>知识共享署名-相同方式共享 2.5
-            中国大陆许可协议</em>进行许可。其条款可以通过点击首页下方的相关链接获得。也可以在<a href=
-            "http://creativecommons.org/licenses/by-sa/2.5/cn/">这里</a>查看。</strong></p>
+                <p><strong>新做了决定，本站点作品(不包含引文)采用<em>知识共享署名-相同方式共享 2.5
+                        中国大陆许可协议</em>进行许可。其条款可以通过点击首页下方的相关链接获得。也可以在<a href=
+                        "http://creativecommons.org/licenses/by-sa/2.5/cn/">这里</a>查看。</strong></p>
 
-    <!-- del tag is nice :) 
-      Better use del and ins (means `insert' ?) together
-      -->
-            <p>
-            版权归我所有，呵呵。当然，引文的版权仍归其原作者享有。<del>许可的问题相当令人头疼，看看现在已经有多少个各不相同的许可证吧。</del><ins>目前看来 CC 协议比较不错。</ins></p>
+                <!-- del tag is nice :) 
+                Better use del and ins (means `insert' ?) together
+                -->
+                <p>
+                版权归我所有，呵呵。当然，引文的版权仍归其原作者享有。<del>许可的问题相当令人头疼，看看现在已经有多少个各不相同的许可证吧。</del><ins>目前看来 CC 协议比较不错。</ins></p>
 
-            <p>
-            许可：您可以自由地复制网站上的各种信息（文本，图片等等）。但是请注意，引文除外。（它们对复制、修改、再发行的许可可能有其他的要求。<strong>请注意原作者的声明。</strong>）</p>
+                <p>
+                许可：您可以自由地复制网站上的各种信息（文本，图片等等）。但是请注意，引文除外。（它们对复制、修改、再发行的许可可能有其他的要求。<strong>请注意原作者的声明。</strong>）</p>
 
-            <p>我很希望html, css的初学者（基本上等于写网站的初学者）能从这个站点得到一些帮助。其实我也是个初学者。:-)</p>
-        </div>
+                <p>我很希望html, css的初学者（基本上等于写网站的初学者）能从这个站点得到一些帮助。其实我也是个初学者。:-)</p>
+            </div>
 
-        <div class="shadow" id="aboutme">
-            <h2>关于我</h2>
-            <p><a href="../html/libra.html">我的星座</a>:-)</p>
-            <p>与我联系：<a href=
-                "mailto:alick9188@163.com">邮箱</a> 或者 <abbr title=
-                "Add me: alick9188@gmail.com">Google talk</abbr>
-            </p>
-        </div>
+            <div class="shadow" id="aboutme">
+                <h2>关于我</h2>
+                <p><a href="../html/libra.html">我的星座</a>:-)</p>
+                <p>与我联系：<a href=
+                    "mailto:alick9188@163.com">邮箱</a> 或者 <abbr title=
+                    "Add me: alick9188@gmail.com">Google talk</abbr>
+                </p>
+            </div>
 
-    </div><!-- end of maincontent div -->
+        </div><!-- end of maincontent div -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <div class="tiny">
